# rather-labs

./: .gitignore  README.md  pyproject.toml  requirements.txt
challenge/: enums.py  main.py  product_repository.py  product_routes.py  product_service.py  schemas.py
challenge/config/: logger.py  settings.py
challenge/db/: database.py  models.py
